name:           creditCardValidator
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  build-depends:
      base
  exposed-modules:
      CreditCardValidator
  other-modules:
      Paths_creditCardValidator
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: CreditCardValidatorSpec.hs
  hs-source-dirs:
      test
  build-depends:
      base
    , creditCardValidator
    , hspec
  default-language: Haskell2010
